--- a/app/src/main/res/layout/activity_servico_editar_input.xml
+++ b/app/src/main/res/layout/activity_servico_editar_input.xml
@@ -6,46 +6,43 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="15px"
-    tools:context=".Telas.PainelControle.painelUsuario.EditarUsuarioInput">
+    tools:context=".Telas.PainelControle.painelServico.ServicoEditarInput">
 
     <TextView
-        android:id="@+id/TextViewTelaEditUsuario"
+        android:id="@+id/ServicoMESSAGE_input"
         android:layout_width="match_parent"
         android:layout_height="88dp"
-        android:text="@string/TextViewTelaEditUsuario"
+        android:text="@string/ServicoMESSAGE_input"
         android:textAlignment="center"
         android:textColor="#FF1100"
         android:textSize="24sp"
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/TextViewDigiteCPF"
+        android:id="@+id/Servico_id_input_TelaEDITservico"
         android:layout_width="match_parent"
-        android:layout_height="78dp"
-        android:text="@string/TextViewDigiteCPF"
+        android:layout_height="wrap_content"
+        android:text="@string/Servico_id_input_TelaEDITservico"
         android:textColor="#000000"
         android:textSize="24sp" />
 
     <EditText
-        android:id="@+id/EdtCPFprocurar"
+        android:id="@+id/edtServio_id_input"
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:maxLength="11"
-        android:numeric="integer"
-        android:text="@string/EdtCPFprocurar" />
+        android:text="@string/edtServio_id_input" />
 
     <Button
-        android:id="@+id/btnProcurarCPFCliente"
+        android:id="@+id/btnServico_Procurar_input"
         android:layout_width="match_parent"
         android:layout_height="67dp"
-        android:text="@string/btnProcurarCPFCliente" />
+        android:text="@string/btnServico_Procurar_input" />
 
     <Button
-        android:id="@+id/btnVoltarInput"
+        android:id="@+id/btnServico_voltar_input"
         android:layout_width="match_parent"
         android:layout_height="67dp"
-        android:text="@string/btnVoltarInput" />
-
+        android:text="@string/btnServico_voltar_input" />
 </LinearLayout>
