--- a/app/src/main/res/layout/activity_agendamento_editar_output.xml
+++ b/app/src/main/res/layout/activity_agendamento_editar_output.xml
@@ -10,7 +10,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Telas.PainelControle.AgendamentoEditarOutput">
+    tools:context=".Telas.PainelControle.painelAgendamento.AgendamentoEditarOutput">
 
     <TextView
         android:id="@+id/txtAgendamentoOutput_MESSAGE"
