--- a/app/src/main/res/layout/activity_ordem_servico_editar_input.xml
+++ b/app/src/main/res/layout/activity_ordem_servico_editar_input.xml
@@ -2,47 +2,47 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:padding="15px"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="15px"
-    tools:context=".Telas.PainelControle.painelAgendamento.AgendamentoEditarInput">
+    tools:context=".Telas.PainelControle.OrdemServicoEditarInput">
 
     <TextView
-        android:id="@+id/txtAgendamentoEditarInput_MESSAGE"
+        android:id="@+id/txtOrdemServicoEditarInput_MESSAGE"
         android:layout_width="match_parent"
         android:layout_height="88dp"
-        android:text="@string/txtAgendamentoEditarInput_MESSAGE"
         android:textAlignment="center"
         android:textColor="#FF1100"
         android:textSize="24sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:text="@string/txtOrdemServicoEditarInput_MESSAGE" />
 
     <TextView
-        android:id="@+id/txtAgendamentoInput_id"
+        android:id="@+id/txtOrdemServicoEditarInput_Id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/txtAgendamentoInput_id"
         android:textColor="#000000"
-        android:textSize="24sp" />
+        android:textSize="24sp"
+        android:text="@string/txtOrdemServicoEditarInput_Id" />
 
     <EditText
-        android:id="@+id/edtAgendamentoInput_id"
+        android:id="@+id/edtOrdemServicoEditarInput_Id"
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="@string/edtAgendamentoInput_id" />
+        android:text="@string/edtOrdemServicoEditarInput_Id" />
 
     <Button
-        android:id="@+id/btnAgendamentoInput_procurar"
+        android:id="@+id/btnOrdemServicoEditarInput_procurar"
         android:layout_width="match_parent"
         android:layout_height="67dp"
-        android:text="@string/btnAgendamentoInput_procurar" />
+        android:text="@string/btnOrdemServicoEditarInput_procurar" />
 
     <Button
-        android:id="@+id/btnAgendamentoInput_voltar"
+        android:id="@+id/btnOrdemServicoEditarInput_voltar"
         android:layout_width="match_parent"
         android:layout_height="67dp"
-        android:text="@string/btnAgendamentoInput_voltar" />
+        android:text="@string/btnOrdemServicoEditarInput_voltar" />
 </LinearLayout>
