--- a/app/src/main/res/layout/activity_listar_usuarios.xml
+++ b/app/src/main/res/layout/activity_listar_usuarios.xml
@@ -1,22 +1,26 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fillViewport="true">
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="15px"
     tools:context=".Telas.PainelControle.painelUsuario.ListarUsuarios">
 
-    <TextView
-        android:id="@+id/textView"
+    <ListView
+        android:id="@+id/listaUsuarios_ls"
         android:layout_width="match_parent"
-        android:layout_height="123dp"
-        android:text="AQUI APARECE A LISTAGEM" />
+        android:layout_height="652dp" />
 
     <Button
         android:id="@+id/btnVoltar_TelaListarUsuarios"
         android:layout_width="match_parent"
         android:layout_height="67dp"
         android:text="@string/btnVoltar_TelaListarUsuarios" />
+
 </LinearLayout>
+</ScrollView>
