--- a/app/src/main/res/layout/activity_listar_usuarios.xml
+++ b/app/src/main/res/layout/activity_listar_usuarios.xml
@@ -14,7 +14,10 @@
     <ListView
         android:id="@+id/listaUsuarios_ls"
         android:layout_width="match_parent"
-        android:layout_height="652dp" />
+
+        android:layout_height="328dp"
+        android:text="TextView" />
+
 
     <Button
         android:id="@+id/btnVoltar_TelaListarUsuarios"
