--- a/app/src/main/res/layout/activity_listar_usuarios.xml
+++ b/app/src/main/res/layout/activity_listar_usuarios.xml
@@ -1,29 +1,43 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true">
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_margin="10dp"
     android:orientation="vertical"
-    android:padding="15px"
-    tools:context=".Telas.PainelControle.painelUsuario.ListarUsuarios">
+    tools:context=".MainActivity">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="54dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/txtList"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_weight="2"
+            android:text="@string/lista_clientes"
+            android:textColor="#000"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/btnCad"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/btnVoltar"
+            android:textColor="#000"
+            android:textStyle="bold"
+            app:backgroundTint="@android:color/darker_gray" />
+    </LinearLayout>
 
     <ListView
-        android:id="@+id/listaUsuarios_ls"
+        android:id="@+id/lstCliente"
         android:layout_width="match_parent"
-
-        android:layout_height="328dp"
-        android:text="TextView" />
-
-
-    <Button
-        android:id="@+id/btnVoltar_TelaListarUsuarios"
-        android:layout_width="match_parent"
-        android:layout_height="67dp"
-        android:text="@string/btnVoltar_TelaListarUsuarios" />
+        android:layout_height="match_parent" />
 
 </LinearLayout>
-</ScrollView>
